--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 
     package="com.example.willake.aboriginalime">
 
+    <uses-sdk android:minSdkVersion="19"
+        android:maxSdkVersion="25" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
